--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="left">
         <div class="image-container">
             <div class="logo-container">
-                <img src="/images/odin-lined.png" alt="odin project logo"><span class="odin-text">ODIN PROJECT</span>
+                <img src="images/odin-lined.png" alt="odin project logo"><span class="odin-text">ODIN PROJECT</span>
             </div>
             <div class="credit">
                 <p class="credit-paragraph">Photo by <a href="https://unsplash.com/@jonathanborba">Jonathan Borba</a>
